# toronto_parking_tickets

./: .gitignore  Manifest.toml  Project.toml  README.md  backend.py  builddock.sh  dockerfile  errorno.txt  flake.nix  heavyhitters.jld2  make_json.jl  notes.txt  parking_viz_library.jl  pyproject.toml  readme.md  rundock.sh  small_streetsegs.json  start_nominatim.sh  startlocal_nominatim.sh  streetsegdb_1  streetsegdb_9  times.txt  tix.jl  vectortiles.txt
.local/share/jupyter/: nbsignatures.db  notebook_secret
.local/share/jupyter/runtime/: notebook_cookie_secret
blogposts/: behind_scenes_1.md  mainblurb.md
blogposts/.ipynb_checkpoints/: behind_scenes_1-checkpoint.md  mainblurb-checkpoint.md
data/: pipeline.sh
data_eng/: clean.py  hydrate.py
scripts/: start_nominatim.sh
static/files/: small_streetsegs.json
static/js/: viz.js
svc/libpostal_rest/: start.sh
svc/nominatim/: start.sh
templates/: viz.html
test/: Manifest.toml  blah_123123  testdb  testnotes.jl
