[tool.poetry]
name = "toronto-parking-tickets"
version = "0.1.0"
description = ""
authors = ["Dillon Chan <dillon@mosiman.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyPostal = "^1.1"
pandas = "^2.1.3"
duckdb = "^0.9.2"
psycopg = "^3.1.14"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
